Fix to look good on mobile devise.

--- a/css/whh.css
+++ b/css/whh.css
@@ -1,5 +1,6 @@
 body {
   background: #fafafa url("../img/cream.png") repeat;
+  margin-top: 120px;
 }
 
 nav.grey {
@@ -15,6 +16,15 @@ nav form.search{
 
 .hand {
   cursor: pointer;
+  margin-top: 7px;
+}
+
+.white {
+  color: white;
+}
+
+.brand {
+  width: 325px;
 }
 
 .brand-title {
@@ -25,9 +35,9 @@ nav form.search{
 }
 
 .login {
+  margin-top: 40px;
   border: 1px solid #DCDCDC;
   padding: 10px 15px;
-  margin: 60px 0px;
   min-height: 20px;
   margin-bottom: 20px;
   background-color: #f5f5f5;
